--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/urdf_ros2_rviz2
+script_dir=$base/lib/space_viz
 [install]
-install_scripts=$base/lib/urdf_ros2_rviz2
+install_scripts=$base/lib/space_viz
