--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>urdf_ros2_rviz2</name>
+  <name>space_viz</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="mail@mahaofei.com">mahaofei</maintainer>
+  <maintainer email="gremar@kth.se">mahaofei</maintainer>
   <license>TODO: License declaration</license>
 
   <test_depend>ament_copyright</test_depend>
